# Conch-sounds

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  README.md  environment.yml  index.html  params.json  py.test.py  pyproject.toml  requirements.txt  rtd_environment.yml  rtd_requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
acousticsim/: __init__.py  exceptions.py  helper.py  main.py  multiprocessing.py  utils.py
acousticsim/analysis/: helper.py  specgram.py
conch/: __init__.py  exceptions.py  helper.py  io.py  main.py  multiprocessing.py  threading.py  utils.py
docs/: Makefile
docs/source/: conf.py  (+3 more)
soundsim/: AudioProcessing.py  Lex.py  functions.py  models.py
tests/: conftest.py  test_ampenv.py  test_analysis_amplitude_envelopes.py  test_analysis_autovot.py  test_analysis_formants.py  test_analysis_formants_praat.py  test_analysis_intensity_praat.py  test_analysis_mfcc.py  test_analysis_mfcc_praat.py  test_analysis_pitch.py  test_analysis_pitch_praat.py  test_analysis_pitch_reaper.py  test_clustering.py  test_distance_dct.py  test_distance_dtw.py  test_distance_point.py  test_distance_xcorr.py  test_dtw.py  test_formants.py  test_gammatone.py  test_helper.py  test_intensity.py  test_io.py  test_main_func.py  test_main_func_multiprocessing.py  test_main_func_threading.py  test_mfcc.py  test_pitch.py  test_praat.py  test_rep_ampenv.py  test_rep_base.py  test_rep_formants.py  test_rep_gammatone.py  test_rep_mfcc.py  test_rep_pitch.py  test_rep_pitch_reaper.py  test_rep_specgram.py  test_segmentation.py  test_segments.py  test_specgram.py  (+1 more)
(+219 files in other folders)
