[metadata]
name = Conch-sounds
description = Analyze acoustic similarity in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmcauliffe/Conch-sounds
author = Michael McAuliffe
author_email = michael.e.mcauliffe@gmail.com
maintainer = Michael McAuliffe
maintainer_email = michael.e.mcauliffe@gmail.com
license = MIT
license_file = LICENSE
license_files = LICENSE
classifiers = Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Linguistic
keywords = phonetics
    acoustics
    acoustic similarity

[options]
packages = find:
install_requires =
    numpy
    librosa
    scipy
    praatio
    pyraat
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    coverage
    coveralls
    interrogate
    pytest
    pytest-mypy
    setuptools-scm
    tomli
    tox
    tox-conda
docs =
    interrogate
    numpydoc
    pydata-sphinx-theme
    sphinx
    sphinx-design
testing =
    coverage
    coveralls
    pytest

[options.package_data]
conch.analysis.pitch =
    *.praat
conch.analysis.formants =
    *.praat
conch.analysis.intensity =
    *.praat
conch.analysis.mfcc =
    *.praat

[tool:pytest]
testpaths = tests
norecursedirs = data
